# dataclass-sqlalchemy-mixins

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  docker-compose.yml  pyproject.toml  setup.cfg
.github/workflows/: codeql-analysis.yml  lint.yml  publish.yml  test.yml  test_sqlalchemy_1.4.21.yml  test_sqlalchemy_1_4_21.yml  test_sqlalchemy_2.0.yml  unit_test.yml
core/: base.py  sqlalchemy_base_models.py
core/base/: mixins.py
core/pydantic/: sqlalchemy_base_models.py
dataclass_sqlalchemy_mixins/base/: mixins.py  utils.py
dataclass_sqlalchemy_mixins/pydantic_mixins/: sqlalchemy_base_models.py
tests/: conftest.py  docker-compose.yml  models.py  models_factory.py
tests/base/: test_base.py  test_config.py
tests/filtering/: conftest.py  test_fields_filters.py  test_foreign_key_fields_filters.py  test_nested_foreign_key_fields_filters.py
tests/ordering/: conftest.py  test_fields_orderings.py  test_foreign_key_fields_orderings.py  test_nested_foreign_key_fields_orderings.py
tests/to_sql/: conftest.py  test_fields_filters.py  test_foreign_key_fields_filters.py  test_nested_foreign_key_fields_filters.py
