[tool.poetry]
name = "dataclass-sqlalchemy-mixins"
version = "0.3.0"
description = "Allows to convert dataclasses to sqlalchemy filters and orderings."
authors = ["ViAchKoN"]
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[tool.poetry.dependencies]
python = "^3.8.1"
pydantic = {version=">=1.9", optional = true}
sqlalchemy = {version=">=1.4.2"}

[tool.poetry.group.dev.dependencies]
fastapi = "^0.111.0"
pytest = "^8.2.2"
sqlalchemy-utils = "^0.41.2"
faker = "^25.8.0"
factory-boy = "^3.3.0"
psycopg2-binary = "^2.9.9"
black = "^24.4.2"
isort = "^5.13.2"
pytest-cov = "^5.0.0"
flake8 = "^7.1.0"
pre-commit = "^3.0"


[tool.poetry.extras]
pydantic = ["pydantic"]


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
